CMGRP_CD 및 관련 컬럼 삭제, 템플릿2개 추가

--- a/pom.xml
+++ b/pom.xml
@@ -184,10 +184,15 @@
 	        <version>1.16</version>
 	    </dependency>
 
-	    <dependency>
+	    <!--<dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>42.2.5</version>
+        </dependency>-->
+	    <dependency>
+            <groupId>org.postgresql</groupId>
+            <artifactId>postgresql</artifactId>
+            <version>42.7.3</version>
         </dependency>
 
         <dependency>
